# codexmcp

./: .gitignore  pyproject.toml
src/codexmcp/: server.py
tests/: test_image_generate.py
